Fix the images align in AmazonAlexa

--- a/AmazonAlexa/css/style.css
+++ b/AmazonAlexa/css/style.css
@@ -51,6 +51,12 @@ h1
 	border:0.1rem solid white;
 }
 
+.full_img
+{
+	width:100%;
+	height:100%;
+}
+
 .white_text
 {
 	color: white;
